--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/index.scss css/index.css && node-sass --include-path scss scss/swiper.scss css/swiper.css && node-sass --include-path scss scss/galeria.scss css/galeria.css && node-sass --include-path scss scss/custom.scss css/custom.css",
+    "build-css": "node-sass --include-path scss scss/style.scss css/style.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
